<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/emi_calculator"
            android:textAllCaps="true"
            android:textColor="#009688"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textYears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:text="@string/years" />

        <EditText
            android:id="@+id/editYears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:baselineAligned="false"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/textRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:text="@string/interest_rate" />

        <EditText
            android:id="@+id/editRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:baselineAligned="false"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:text="@string/principal_amount" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:baselineAligned="false"
            android:ems="10"
            android:inputType="number"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/eval" />

        <TextView
            android:id="@+id/lblFuel"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/interest"
            android:textColor="#3F51B5" />

        <TextView
            android:id="@+id/textInterest"
            android:layout_width="330dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            tools:text="0" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>